--- a/config/b2b-project-scratch-def.json
+++ b/config/b2b-project-scratch-def.json
@@ -1,7 +1,7 @@
 {
   "orgName": "Test B2B Company",
   "edition": "Developer",
-  "features": ["Communities", "B2BCommerce", "OrderManagement", "EnableSetPasswordInApi"],
+  "features": ["Communities", "B2BCommerce", "OrderManagement", "EnableSetPasswordInApi", "CommerceNewProductImporter"],
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
