--- a/config/both-project-scratch-def.json
+++ b/config/both-project-scratch-def.json
@@ -7,7 +7,8 @@
     "B2CCommerceGMV",
     "PersonAccounts",
     "OrderManagement",
-    "EnableSetPasswordInApi"
+    "EnableSetPasswordInApi",
+    "CommerceNewProductImporter"
   ],
   "settings": {
     "lightningExperienceSettings": {
