--- a/config/both-project-scratch-def.json
+++ b/config/both-project-scratch-def.json
@@ -7,8 +7,7 @@
     "B2CCommerceGMV",
     "PersonAccounts",
     "OrderManagement",
-    "EnableSetPasswordInApi",
-    "CommerceNewProductImporter"
+    "EnableSetPasswordInApi"
   ],
   "settings": {
     "lightningExperienceSettings": {
