--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "sf-husky-pre-commit",
+      "pre-commit": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix; sf-husky-pre-commit",
       "commit-msg": "sf-husky-commit-msg",
       "pre-push": "sf-husky-pre-push"
     }
