--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-orchestration",
-  "version": "234.0.2",
+  "version": "234.0.3",
   "author": "Jonathan Arndt",
   "bugs": "https://git.soma.salesforce.com/communities/commerce-on-lightning-orchestration/issues",
   "dependencies": {
@@ -131,7 +131,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix; sf-husky-pre-commit",
+      "pre-commit": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix; git --no-pager diff HEAD package.json | egrep '\"version\": \"[0-9]+\\.' || npm --no-git-tag-version version patch; sf-husky-pre-commit",
       "commit-msg": "sf-husky-commit-msg",
       "pre-push": "sf-husky-pre-push"
     }
