--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-orchestration",
-  "version": "234.0.3",
+  "version": "234.0.4",
   "author": "Jonathan Arndt",
   "bugs": "https://github.com/forcedotcom/commerce-on-lightning-orchestration/issues",
   "dependencies": {
@@ -127,11 +127,11 @@
     "test:command-reference": "./bin/run commandreference:generate --erroronwarnings",
     "test:deprecation-policy": "./bin/run snapshot:compare",
     "test:nuts": "nyc mocha \"**/*.nut.ts\" --slow 4500 --timeout 600000 --parallel",
-    "version": "(oclif-dev readme && sed -i.bak -e \"s|$(echo ~)|~|g\" README.md && git add README.md) || exit 0"
+    "version": "(oclif-dev readme && sed -i.bak -e \"s|$(echo $HOME)|~|g\" -e \"s|$(whoami)|\"\\$\\(whoami\\)\"|g\" README.md && git add README.md) || exit 0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix; git --no-pager diff HEAD package.json | egrep '\"version\": \"[0-9]+\\.' || npm --no-git-tag-version version patch; sf-husky-pre-commit",
+      "pre-commit": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix; git --no-pager diff HEAD package.json | egrep '\"version\": \"[0-9]+\\.' || npm --no-git-tag-version version patch; git add package.json; sf-husky-pre-commit",
       "commit-msg": "sf-husky-commit-msg",
       "pre-push": "sf-husky-pre-push"
     }
