--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commerce-orchestration",
-  "version": "238.0.2",
+  "version": "238.0.3",
   "author": "Jonathan Arndt",
   "bugs": "https://github.com/forcedotcom/commerce-on-lightning-orchestration/issues",
   "dependencies": {
@@ -96,10 +96,7 @@
       "@oclif/plugin-help",
       "@oclif/plugin-command-snapshot",
       "@salesforce/plugin-command-reference"
-    ],
-    "hooks": {
-      "init": "./lib/hooks/init/download"
-    }
+    ]
   },
   "repository": "https://github.com/forcedotcom/commerce-on-lightning-orchestration",
   "scripts": {
@@ -131,7 +128,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix; git --no-pager diff HEAD package.json | egrep '\"version\": \"[0-9]+\\.' || npm --no-git-tag-version version patch; git add package.json; sf-husky-pre-commit",
+      "pre-commit": "eslint \"src/**/*.ts\" \"test/**/*.ts\" --fix; if git --no-pager diff HEAD package.json | egrep '\"version\": \"[0-9]+\\.'; then npm run version; else (npm --no-git-tag-version version patch; git add package.json; sf-husky-pre-commit); fi;",
       "commit-msg": "sf-husky-commit-msg",
       "pre-push": "sf-husky-pre-push"
     }
